Gestion des onglets

--- a/ShaBiDi/ShaBiDi.csproj
+++ b/ShaBiDi/ShaBiDi.csproj
@@ -57,6 +57,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Sujet.cs" />
+    <Compile Include="TabNameWindow.xaml.cs">
+      <DependentUpon>TabNameWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Vecteur2.cs" />
     <Page Include="ImportWindow.xaml">
       <SubType>Designer</SubType>
@@ -80,6 +83,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="TabNameWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Observation.cs" />
