--- a/ShaBiDi/ShaBiDi.csproj
+++ b/ShaBiDi/ShaBiDi.csproj
@@ -56,6 +56,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="PointAttention.cs" />
     <Compile Include="Sujet.cs" />
     <Compile Include="TabNameWindow.xaml.cs">
       <DependentUpon>TabNameWindow.xaml</DependentUpon>
