Premier ancrage indicateur

--- a/ShaBiDi/ShaBiDi.csproj
+++ b/ShaBiDi/ShaBiDi.csproj
@@ -87,13 +87,11 @@
     <Compile Include="TauxRecouvrement.xaml.cs">
       <DependentUpon>TauxRecouvrement.xaml</DependentUpon>
     </Compile>
-    <Compile Include="TauxRecouvrement_WindowForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="TauxRecouvrement_WindowForm.Designer.cs">
-      <DependentUpon>TauxRecouvrement_WindowForm.cs</DependentUpon>
+    <Compile Include="TauxRecouvrementWPF.xaml.cs">
+      <DependentUpon>TauxRecouvrementWPF.xaml</DependentUpon>
     </Compile>
     <Compile Include="Vecteur2.cs" />
+    <Compile Include="ViewModels\TauxRecouvrementModel.cs" />
     <Page Include="CreateIndicWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -125,6 +123,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="TauxRecouvrement.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TauxRecouvrementWPF.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
