Modif menu principal (comparaison et extraction)

--- a/ShaBiDi/ShaBiDi.csproj
+++ b/ShaBiDi/ShaBiDi.csproj
@@ -168,6 +168,12 @@
   <ItemGroup>
     <Resource Include="Resources\close.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\file-excel.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\filter.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
